# trading_app

./: main.py  pyproject.toml  validation.py
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 2024-02-01e21233a277dc_initial.py  2024-04-01c0715ffeb98a_add_operations.py  bc7ddccae599_database_creation.py
models/: models.py
src/: main.py
src/operations/: router.py  schemas.py
