[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["tettle2806 <zidanzohid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.108.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

