[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["tettle2806 <zidanzohid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.108.0"}
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

